@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class ShowLegacyDataUI{
}

class ShowLegacyDataController{
+importInformationFromFile(String path);
}

class AgencyRepository{
-List<Agency> getAgencyList();
-List<Agency> addAgency(Agency agency);
-validateAgency(Agency agency);
-Agency CreateAgency(int id, String designation, Address address, String emailAddress, String phoneNumber);
+AgencyRepository();
}

class Repositories{
-AgencyRepository agencyRepository;
+getAgencyRepository();
+getInstance();
}


class Announcement{
   -Property property;
   -LocalDate date;
   -double commission;
   -RequestType requestType;
   -double price;
   -Owner owner;
   -Store store;
   +getDate();
   +getProperty();
   +getCommission();
   +getCommissionType();
   +getRequestType();
   +getPrice();
   +getOwner();
   +getAgent();
   +getStore();
   +setDate (LocalDate date);
   +setProperty (Property property);
   +setCommission (double commission);
   +setCommissionType (String commissionType);
   +setRequestType (RequestType requestType);
   +setPrices (double price);
   +setOwner (Owner owner);
   +setAgent (Agent agent);
   +setStore (Store store);
}

class Agency{
   -int id;
   -String designation;
   -Address address;
   -String emailAddress;
   -String phoneNumber;
    +getID;
    +getDesignation;
    +getAddress;
    +getEmailAddress;
    +getPhoneNumber;
    +setAddress (Address address);
    +setDesignation (String designation);
    +setEmailAddress (String emailAddress);
    +setID (int id);
    +setPhoneNumber (String phoneNumber);
}

ShowLegacyDataUI ..> ShowLegacyDataController
ShowLegacyDataController ..> Repositories : repositories
Repositories --> AgencyRepository
AgencyRepository "1" --> "0...*" Agency
Agency "1" --> "0..*" Announcement : has


@enduml